--- a/admin/app/views/template_soccer_player_list.scala.html
+++ b/admin/app/views/template_soccer_player_list.scala.html
@@ -35,7 +35,27 @@
             }
         }
 
-        function registerToEditSalary() {
+        function changeStateActivated(element, value) {
+            var id = element.attr("data-competition-id")
+            $.ajax({
+                url: "/admin/template_soccer_player/"+id+"/activated/"+value,
+                success: function(result) {
+                    element.effect( "highlight", {}, 1000 );
+                },
+                error: function(result) {
+                    element.effect( "highlight", {color:"#FF0000"}, 1000 );
+                }
+            });
+            return true;
+        }
+
+        function registerToEdit() {
+            $(".edit-activated")
+                .off()
+                .click(function() {
+                    changeStateActivated($(this), $(this).is(':checked'));
+                });
+
             $(".edit-salary")
                 .off()
                 .attr("contenteditable", @canEditSalaries)
@@ -64,6 +84,7 @@
         $(document).ready( function(){
             $('#ajax_table_id').dataTable( {
               "columns": [
+                { "title": "Activated" },
                 { "title": "OptaId" },
                 { "title": "Name" },
                 { "title": "Field" },
@@ -80,7 +101,7 @@
               "sPaginationType": "full_numbers",
               "sAjaxSource": "/admin/template_soccer_players/ajax",
               "fnDrawCallback": function( oSettings ) {
-                registerToEditSalary();
+                registerToEdit();
               }
             });
         })
