sorting activated: "desc"

--- a/admin/app/views/template_soccer_player_list.scala.html
+++ b/admin/app/views/template_soccer_player_list.scala.html
@@ -95,7 +95,7 @@
               ],
               "iDisplayLength": 100,
               "bProcessing": true,
-              "aaSorting": [[ 0, "asc" ]],
+              "aaSorting": [[ 0, "desc" ]],
               "bServerSide": true,
               "bJQueryUI": true,
               "sPaginationType": "full_numbers",
