--- a/admin/app/views/opta_competition_list.scala.html
+++ b/admin/app/views/opta_competition_list.scala.html
@@ -75,6 +75,10 @@
 
 <h1 class="page-header">Opta Competitions</h1>
 
+<a href="@OptaController.createAllCompetitions"><button class="btn btn-danger">Create All Competitions</button></a>
+
+<h2 class="sub-header"></h2>
+
 <div class="table-responsive">
     <table id="ajax_table_id" class="table table-striped"></table>
 </div>
