initital setup disabled si no hay competiciones activas

--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -8,7 +8,11 @@
 
 
 <div>
-    <a href="@DashboardController.initialSetup"><button class="btn btn-danger">Initial Setup</button></a>
+    @if(competitions_enabled.isEmpty) {
+        <a href="@DashboardController.initialSetup" class="btn btn-danger disabled">Initial Setup</a>
+    } else {
+        <a href="@DashboardController.initialSetup" class="btn btn-danger">Initial Setup</a>
+    }
 </div>
 <br/>
 <div>
