--- a/admin/app/views/opta_competition_list.scala.html
+++ b/admin/app/views/opta_competition_list.scala.html
@@ -34,6 +34,7 @@
                     { "title": "Competition Id" },
                     { "title": "Competition Code" },
                     { "title": "Competition Name" },
+                    { "title": "Season Id" },
                     { "title": "Created At" }
                 ],
                 "data": [
@@ -43,6 +44,7 @@
                             "@p.competitionId",
                             "@p.competitionCode",
                             "@p.competitionName",
+                            "@p.seasonId",
                             "@GlobalDate.formatDate(p.createdAt)"
                         ] @if(index < competitions.size-1) { , }
                     }
