OptaCompetition: seasonCompetitionId (seasonID + competitionId)

--- a/admin/app/views/import_teams.scala.html
+++ b/admin/app/views/import_teams.scala.html
@@ -34,7 +34,7 @@
             "@p.optaTeamId",
             "@p.name",
             "@p.shortName",
-            @competition_names(p.competitionIds)
+            @competition_names(p.seasonCompetitionIds)
         ] @if(index < team_list.size-1) { , }
     }
 }
