--- a/admin/app/views/opta_soccer_team_list.scala.html
+++ b/admin/app/views/opta_soccer_team_list.scala.html
@@ -19,7 +19,7 @@
                             "@p.optaTeamId",
                             "@p.name",
                             "@p.shortName",
-                            "@p.competitionIds",
+                            "@p.seasonCompetitionIds",
                             "@p.updatedTime"
                         ] @if(index < teams.size-1) { , }
                     }
