fix import_teams & opta_competition_list

--- a/admin/app/views/opta_competition_list.scala.html
+++ b/admin/app/views/opta_competition_list.scala.html
@@ -40,7 +40,7 @@
                 "data": [
                     @for((p, index) <- competitions.zipWithIndex) {
                         [
-                            "@p.competitionId~@p.activated",
+                            "@p.seasonCompetitionId~@p.activated",
                             "@p.competitionId",
                             "@p.competitionCode",
                             "@p.competitionName",
