--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -21,7 +21,7 @@
         <span class="bg-danger text-danger" style="padding:5px">&#8999; Ninguna Competición</span>
     } else {
         @for((p, index) <- competitions_enabled.zipWithIndex) {
-            <em class="bg-success text-primary" style="margin:5px; padding:5px">&#10003; @p.competitionName</em>
+            <em class="bg-success text-primary" style="margin:5px; padding:5px">&#10003; @p.competitionName/@p.seasonId</em>
         }
     }
 </div>
