Al procesar el F40, se detectan los players que son nuevos, los modificados y los que han cambiado de equipo

--- a/admin/app/views/import_match_events.scala.html
+++ b/admin/app/views/import_match_events.scala.html
@@ -20,8 +20,16 @@
             "@p.competitionName",
             "@p.seasonId",
             "@p.seasonName",
-            "@optaTeamMap(p.homeTeamId).name (@p.homeTeamId)",
-            "@optaTeamMap(p.awayTeamId).name (@p.awayTeamId)",
+            @if(optaTeamMap.containsKey(p.homeTeamId)) {
+                "@optaTeamMap(p.homeTeamId).name (@p.homeTeamId)",
+            } else {
+                "@p.homeTeamId",
+            }
+            @if(optaTeamMap.containsKey(p.awayTeamId)) {
+                "@optaTeamMap(p.awayTeamId).name (@p.awayTeamId)",
+            } else {
+                "@p.awayTeamId",
+            }
             "@GlobalDate.formatDate(p.matchDate)"
         ] @if(index < match_list.size-1) { , }
     }
