--- a/admin/app/views/simulatorbar.scala.html
+++ b/admin/app/views/simulatorbar.scala.html
@@ -11,7 +11,7 @@
                     <div style="margin-top: 5px;"><a>Current Date:<span style="font-weight:700; margin-left: 0.50em;" id="time">@SimulatorController.getCurrentDate()</span></a></div>
                     <div><a><span>Next Stop:</span><span style="font-weight:700;margin-left: 0.50em;position: absolute; right: 0px;" id="nextStop">@SimulatorController.getNextStop()</span></a></div>
                 </li>
-                <li><a>Next File Index:<span style="font-weight:700;margin-left: 0.20em;" id="nextStepDesc">@SimulatorController.getNextStepDescription()</span></a></li>
+                <li><a>Next File Id:<span style="font-weight:700;margin-left: 0.20em;" id="nextStepDesc">@SimulatorController.getNextStepDesc()</span></a></li>
                 @if(SimulatorController.isSnapshotEnabled()) {
                     <li><a>Snapshot:<strong> @SnapshotController.getSnapshotName()</strong></a></li>
                 }
