--- a/admin/app/views/template_match_event_list.scala.html
+++ b/admin/app/views/template_match_event_list.scala.html
@@ -25,10 +25,10 @@
 }
 
 @match_event_state(match_event : model.TemplateMatchEvent) = {
-    @if(match_event.isFinished()) {
+    @if(match_event.isGameFinished()) {
         <button class="btn btn-danger state_match_event">Finished</button>
     } else {
-        @if(match_event.isStarted()) {
+        @if(match_event.isGameStarted()) {
             <button class="btn btn-success state_match_event">Live</button>
         } else {
             <button class="btn btn-warning state_match_event">Waiting</button>
@@ -61,21 +61,33 @@
             <td>@p.optaTeamAId</td>
             <td>@p.optaTeamBId</td>
             <td>
-                <a href="@TemplateSoccerTeamController.show(p.templateSoccerTeamAId.toString())">
-                    @if(templateSoccerTeamMap.containsKey(p.templateSoccerTeamAId)) {
-                        @templateSoccerTeamMap(p.templateSoccerTeamAId).name
+                <a href="@TemplateMatchEventController.show(p.templateMatchEventId.toString())">
+                    @if(p.isGameStarted()) {
+                        @if(templateSoccerTeamMap.containsKey(p.templateSoccerTeamAId)) {
+                            @templateSoccerTeamMap(p.templateSoccerTeamAId).name (@p.getFantasyPointsForTeam(p.templateSoccerTeamAId))
+                        } else {
+                            @p.templateSoccerTeamAId
+                        }
+                        vS
+                        @if(templateSoccerTeamMap.containsKey(p.templateSoccerTeamBId)) {
+                            @templateSoccerTeamMap(p.templateSoccerTeamBId).name (@p.getFantasyPointsForTeam(p.templateSoccerTeamBId))
+                        } else {
+                            @p.templateSoccerTeamBId
+                        }
                     } else {
-                        @p.templateSoccerTeamAId
+                        @if(templateSoccerTeamMap.containsKey(p.templateSoccerTeamAId)) {
+                            @templateSoccerTeamMap(p.templateSoccerTeamAId).name
+                        } else {
+                            @p.templateSoccerTeamAId
+                        }
+                        vS
+                        @if(templateSoccerTeamMap.containsKey(p.templateSoccerTeamBId)) {
+                            @templateSoccerTeamMap(p.templateSoccerTeamBId).name
+                        } else {
+                            @p.templateSoccerTeamBId
+                        }
                     }
-                </a>
-                vs
-                <a href="@TemplateSoccerTeamController.show(p.templateSoccerTeamBId.toString())">
-                    @if(templateSoccerTeamMap.containsKey(p.templateSoccerTeamBId)) {
-                        @templateSoccerTeamMap(p.templateSoccerTeamBId).name
-                    } else {
-                        @p.templateSoccerTeamBId
-                    }
-                </a>
+                </a></td>
             </td>
             <td>@GlobalDate.formatDate(p.startDate)</td>
             <td>@match_event_state(p)</td>
