OptaPlayer cleanup (Fixes: #16878495223438 and #16878495223442)

--- a/admin/app/views/import_soccers.scala.html
+++ b/admin/app/views/import_soccers.scala.html
@@ -17,7 +17,7 @@
             "@p.name",
             "@p.position",
             "@p.teamId",
-            "@p.teamName"
+            "@p.getTeamName()"
         ] @if(index < soccer_list.size-1) { , }
     }
 }
