--- a/admin/app/views/opta_soccer_player_list.scala.html
+++ b/admin/app/views/opta_soccer_player_list.scala.html
@@ -22,7 +22,7 @@
                             "@p.name",
                             "@p.position",
                             "@p.teamId",
-                            "@p.teamName",
+                            "@p.getTeamName()",
                             "@GlobalDate.formatDate(p.updatedTime)",
                         ] @if(index < soccers.size-1) { , }
                     }
