--- a/admin/app/views/template_contest.scala.html
+++ b/admin/app/views/template_contest.scala.html
@@ -3,11 +3,23 @@
 @import controllers.admin.routes._
 @import model.GlobalDate
 
+@template_state() = {
+    @if(template_contest.isFinished()) {
+        <button class="btn btn-danger">Finished</button>
+    } else {
+        @if(template_contest.isStarted()) {
+            <button class="btn btn-success">Live</button>
+        } else {
+            <button class="btn btn-warning">Waiting</button>
+        }
+    }
+}
+
 @match_event_state(match_event : model.TemplateMatchEvent) = {
-    @if(match_event.isFinished()) {
+    @if(match_event.isGameFinished()) {
         <button class="btn btn-danger state_match_event">Finished</button>
     } else {
-        @if(match_event.isStarted()) {
+        @if(match_event.isGameStarted()) {
             <button class="btn btn-success state_match_event">Live</button>
         } else {
             <button class="btn btn-warning state_match_event">Waiting</button>
@@ -18,8 +30,7 @@
 @main("Template Contest - Admin") {
 
 <h1 class="page-header">Template Contest</h1>
-
-<h2 class="sub-header">@template_contest.name</h2>
+<h2 class="sub-header">@template_contest.name  @template_state</h2>
 <div class="table-responsive">
     <table class="table table-striped">
         <thead>
