fix Incluir los TemplateSoccerPlayer.playedMatches en las JsonViews.Public

--- a/admin/app/views/template_match_event.scala.html
+++ b/admin/app/views/template_match_event.scala.html
@@ -51,7 +51,7 @@
             <td>@p.name</td>
             <td>@p.fieldPos</td>
             <td>@p.salary</td>
-            <td>@p.playedMatches</td>
+            <td>@p.getPlayedMatches()</td>
             <td>@p.fantasyPoints</td>
         @if(match_event.isGameStarted()) {
             <td><a href="@TemplateSoccerPlayerController.showFantasyPointsInMatchEvent(match_event.templateMatchEventId.toString(), p.templateSoccerPlayerId.toString())">
@@ -93,7 +93,7 @@
             <td>@p.name</td>
             <td>@p.fieldPos</td>
             <td>@p.salary</td>
-            <td>@p.playedMatches</td>
+            <td>@p.getPlayedMatches()</td>
             <td>@p.fantasyPoints</td>
         @if(match_event.isGameStarted()) {
             <td><a href="@TemplateSoccerPlayerController.showFantasyPointsInMatchEvent(match_event.templateMatchEventId.toString(), p.templateSoccerPlayerId.toString())">
