templateMatchEvent & templateSoccerTeam html: usa dataTable

--- a/admin/app/views/template_soccer_team.scala.html
+++ b/admin/app/views/template_soccer_team.scala.html
@@ -8,7 +8,7 @@
 
 <h2 class="sub-header">@template_soccer_team.name</h2>
 <div class="table-responsive">
-    <table class="table table-striped">
+    <table id="table_id" class="table table-striped">
         <!--caption>@template_soccer_team.name</caption-->
         <thead>
         <tr>
