--- a/admin/app/views/template_match_event.scala.html
+++ b/admin/app/views/template_match_event.scala.html
@@ -2,7 +2,19 @@
 
 @import controllers.admin.routes._
 
-@main("Template Mach Event - Admin") {
+@scripts = {
+    <script type="text/javascript">
+        $(document).ready( function(){
+            $('#table_id_2').dataTable( {
+                stateSave: true,
+                iDisplayLength: 100
+            } );
+
+        })
+    </script>
+}
+
+@main("Template Mach Event - Admin", scripts) {
 
 <h1 class="page-header">Template Match Event</h1>
 
@@ -20,7 +32,7 @@
 
 <h2 class="sub-header">Start Date: @match_event.startDate</h2>
 <div class="table-responsive">
-    <table class="table table-striped">
+    <table id="table_id" class="table table-striped">
         <caption class="bg-info">
             @if(templateSoccerTeamMap.containsKey(match_event.templateSoccerTeamAId)) {
             @templateSoccerTeamMap(match_event.templateSoccerTeamAId).name
@@ -62,7 +74,7 @@
         }
         </tbody>
     </table>
-    <table class="table table-striped">
+    <table id="table_id_2" class="table table-striped">
         <caption class="bg-info">
             @if(templateSoccerTeamMap.containsKey(match_event.templateSoccerTeamBId)) {
                 @templateSoccerTeamMap(match_event.templateSoccerTeamBId).name
