--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -38,7 +38,7 @@ function getMongo() {
 
 <div>
     <select id="mongo-conn" onchange="setMongo()" class="form-control" style="width: inherit; display: inline-block;">
-        <option value="local">Local</option>
+        <option value="localhost">Localhost</option>
         <option value="dailysoccer-staging">Staging</option>
         <option value="dailysoccer">Epic Eleven</option>
     </select>
