--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -43,12 +43,14 @@ function getMongo() {
         <option value="dailysoccer">Epic Eleven</option>
     </select>
 
-    <a href="@DashboardController.resetDB" class="btn btn-danger">Reset DB</a>
-    @if(competitions_enabled.isEmpty) {
-        <a href="@DashboardController.initialSetup" class="btn btn-danger disabled">Initial Setup</a>
-    } else {
-        <a href="@DashboardController.initialSetup" class="btn btn-danger">Initial Setup</a>
-    }
+    <div style="float: right; margin-right:100px;">
+        <a href="@DashboardController.resetDB" class="btn btn-danger">Reset DB</a>
+        @if(competitions_enabled.isEmpty) {
+            <a href="@DashboardController.initialSetup" class="btn btn-danger disabled">Initial Setup</a>
+        } else {
+            <a href="@DashboardController.initialSetup" class="btn btn-danger">Initial Setup</a>
+        }
+    </div>
 </div>
 <br/>
 <div>
