--- a/admin/app/views/points_translation_list.scala.html
+++ b/admin/app/views/points_translation_list.scala.html
@@ -8,8 +8,10 @@
 <h1 class="page-header">Event-Point Translation List</h1>
 
 <a href="@PointsTranslationController.newForm"><button class="btn btn-success">New points for Event</button></a>
-<a href="@PointsTranslationController.resetToDefault"><button class="btn btn-danger">Reset points to Default</button></a>
-<a href="@OptaController.updateOptaEvents"><button class="btn btn-danger">Recalculate points for all OptaEvents</button></a>
+<div style="float: right; margin-right:100px;">
+    <a href="@PointsTranslationController.resetToDefault"><button class="btn btn-danger">Reset points to Default</button></a>
+    <a href="@OptaController.updateOptaEvents"><button class="btn btn-danger">Recalculate points for all OptaEvents</button></a>
+</div>
 
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
