TemplateContest & Contest & SoccerPlayerStats: con optaCompetitionId

--- a/admin/app/views/contest_list.scala.html
+++ b/admin/app/views/contest_list.scala.html
@@ -26,6 +26,7 @@
                 { "title": "Current Users" },
                 { "title": "Max Entries" },
                 { "title": "TemplateContestId" },
+                { "title": "Competition" },
                 { "title": "State" }
               ],
               "iDisplayLength": 100,
