--- a/admin/app/views/template_contest_list.scala.html
+++ b/admin/app/views/template_contest_list.scala.html
@@ -25,6 +25,7 @@
                 { "title": "State" },
                 { "title": "Name" },
                 { "title": "Num. Matches" },
+                { "title": "Competition" },
                 { "title": "Min Instances" },
                 { "title": "Max Entries" },
                 { "title": "Salary Cap" },
