--- a/admin/app/views/template_match_event_list.scala.html
+++ b/admin/app/views/template_match_event_list.scala.html
@@ -3,6 +3,71 @@
 @import model._
 @import controllers.admin.routes._
 
+@match_event_state(match_event : model.TemplateMatchEvent) = @{
+    if(match_event.isGameFinished()) {
+        "Finished"
+    } else {
+        if(match_event.isGameStarted()) {
+            "Live"
+        } else {
+            "Waiting"
+        }
+    }
+}
+
+@match_event_name(p : model.TemplateMatchEvent) = @{
+    var teamA = ""
+    var teamB = ""
+    if(p.isGameStarted()) {
+        if(templateSoccerTeamMap.containsKey(p.templateSoccerTeamAId)) {
+            teamA = templateSoccerTeamMap(p.templateSoccerTeamAId).name + "(" + p.getFantasyPointsForTeam(p.templateSoccerTeamAId) + ")"
+        } else {
+            teamA = p.templateSoccerTeamAId.toString
+        }
+        if(templateSoccerTeamMap.containsKey(p.templateSoccerTeamBId)) {
+            teamB = templateSoccerTeamMap(p.templateSoccerTeamBId).name + "(" + p.getFantasyPointsForTeam(p.templateSoccerTeamBId) + ")"
+        } else {
+            teamB = p.templateSoccerTeamBId.toString
+        }
+    } else {
+        if(templateSoccerTeamMap.containsKey(p.templateSoccerTeamAId)) {
+            teamA = templateSoccerTeamMap(p.templateSoccerTeamAId).name
+        } else {
+            teamA = p.templateSoccerTeamAId.toString
+        }
+        if(templateSoccerTeamMap.containsKey(p.templateSoccerTeamBId)) {
+            teamB = templateSoccerTeamMap(p.templateSoccerTeamBId).name
+        } else {
+            teamB = p.templateSoccerTeamBId.toString
+        }
+    }
+    teamA + " vS " + teamB
+}
+
+@include_columns() = {
+    { "title": "OptaId" },
+    { "title": "OptaTeamAId" },
+    { "title": "OptaTeamBId" },
+    { "title": "Teams" },
+    { "title": "Competition" },
+    { "title": "Start Date" },
+    { "title": "State" }
+}
+
+@include_match_events(match_event_list : List[model.TemplateMatchEvent]) = {
+    @for((p, index) <- match_event_list.zipWithIndex) {
+    [
+        "@p.optaMatchEventId",
+        "@p.optaTeamAId",
+        "@p.optaTeamBId",
+        "@TemplateMatchEventController.show(p.templateMatchEventId.toString())~@match_event_name(p)",
+        "@p.optaCompetitionId",
+        "@GlobalDate.formatDate(p.startDate)",
+        "@match_event_state(p)"
+        ] @if(index < match_event_list.size-1) { , }
+    }
+}
+
 @scripts = {
     <script type="text/javascript">
 
@@ -18,22 +83,37 @@
         }
 
         $(document).ready( function(){
+            $('#ajax_table').dataTable( {
+                "columns": [ @include_columns() ],
+                "data": [ @include_match_events(match_events) ],
+                "columnDefs": [ {
+                    "targets": 3,
+                    "mRender": function (data, type, full) {
+                        var fields = data.split('~');
+                        return '<a href="' + fields[0] + '">' + fields[1] + '</a>';
+                    }
+                },
+                {
+                    "targets": 6,
+                    "mRender": function (data, type, full) {
+                        if (data == "Finished") {
+                            return '<button class="btn btn-danger">' + data + '</button>';
+                        } else if (data == "Live") {
+                            return '<button class="btn btn-success">' + data + '</button>';
+                        } else {
+                            return '<button class="btn btn-warning">' + data + '</button>';
+                        }
+                    }
+                } ],
+                stateSave: true,
+                iDisplayLength: 100,
+                "deferRender": true
+            } );
+
             window.setInterval(updatePage, 10000);
         })
 
     </script>
-}
-
-@match_event_state(match_event : model.TemplateMatchEvent) = {
-    @if(match_event.isGameFinished()) {
-        <button class="btn btn-danger state_match_event">Finished</button>
-    } else {
-        @if(match_event.isGameStarted()) {
-            <button class="btn btn-success state_match_event">Live</button>
-        } else {
-            <button class="btn btn-warning state_match_event">Waiting</button>
-        }
-    }
 }
 
 @main("Template Mach Events - Admin", scripts) {
@@ -41,61 +121,7 @@
 <h1 class="page-header">Template Match Events</h1>
 
 <div class="table-responsive">
-    <table id="table_id" class="table table-striped">
-        <thead>
-        <tr>
-            <!--th>Id</th-->
-            <th>OptaId</th>
-            <th>OptaTeamAId</th>
-            <th>OptaTeamBId</th>
-            <th>Teams</th>
-            <th>Competition</th>
-            <th>Start Date</th>
-            <th>State</th>
-        </tr>
-        </thead>
-        <tbody>
-        @for(p <- match_events) {
-        <tr>
-            <!--td>@p.templateMatchEventId</td-->
-            <td>@p.optaMatchEventId</td>
-            <td>@p.optaTeamAId</td>
-            <td>@p.optaTeamBId</td>
-            <td>
-                <a href="@TemplateMatchEventController.show(p.templateMatchEventId.toString())">
-                    @if(p.isGameStarted()) {
-                        @if(templateSoccerTeamMap.containsKey(p.templateSoccerTeamAId)) {
-                            @templateSoccerTeamMap(p.templateSoccerTeamAId).name (@p.getFantasyPointsForTeam(p.templateSoccerTeamAId))
-                        } else {
-                            @p.templateSoccerTeamAId
-                        }
-                        vS
-                        @if(templateSoccerTeamMap.containsKey(p.templateSoccerTeamBId)) {
-                            @templateSoccerTeamMap(p.templateSoccerTeamBId).name (@p.getFantasyPointsForTeam(p.templateSoccerTeamBId))
-                        } else {
-                            @p.templateSoccerTeamBId
-                        }
-                    } else {
-                        @if(templateSoccerTeamMap.containsKey(p.templateSoccerTeamAId)) {
-                            @templateSoccerTeamMap(p.templateSoccerTeamAId).name
-                        } else {
-                            @p.templateSoccerTeamAId
-                        }
-                        vS
-                        @if(templateSoccerTeamMap.containsKey(p.templateSoccerTeamBId)) {
-                            @templateSoccerTeamMap(p.templateSoccerTeamBId).name
-                        } else {
-                            @p.templateSoccerTeamBId
-                        }
-                    }
-                </a></td>
-            </td>
-            <td>@p.optaCompetitionId</td>
-            <td>@GlobalDate.formatDate(p.startDate)</td>
-            <td>@match_event_state(p)</td>
-        </tr>
-        }
-        </tbody>
+    <table id="ajax_table" class="table table-striped">
     </table>
 </div>
 
