Read salaries from google docs, button in dashboard

--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -65,6 +65,9 @@ function getMongo() {
 </div>
 <br/>
 <div>
+    <a class="btn btn-primary" href="@ExcelController.googleOAuth" title="Import Players' from Google Docs.">
+        Import Salaries from Google Docs
+    </a>
     <a class="btn btn-primary" href="@ImportController.importSalaries" title="Import Players' salaries from a CSV file.">
         Import Salaries
     </a>
