Restaurados homeTeamId y awayTeamId

--- a/admin/app/views/opta_event_list.scala.html
+++ b/admin/app/views/opta_event_list.scala.html
@@ -12,6 +12,8 @@
             { "title": "Points Translation Id" },
             { "title": "CompetitionId" },
             { "title": "GameId" },
+            { "title": "HomeTeamId" },
+            { "title": "AwayTeamId" },
             { "title": "OptaPlayerId" },
             { "title": "TypeId" },
             { "title": "Points" },
