Google docs divided in two tasks, cookie set and read, no refreshtoken yet

--- a/admin/app/views/googledocs.scala.html
+++ b/admin/app/views/googledocs.scala.html
@@ -5,15 +5,14 @@
 <h1 class="page-header">Google Docs integration</h1>
 
 <div>
-    <a class="btn btn-primary" href="@ExcelController.readSalaries" title="Read Players' salaries from Google Docs.">
+    <a class="btn btn-primary" href="@ExcelController.loadSalaries" title="Read Players' salaries from Google Docs.">
         Read Players' Salaries
     </a>
 
-    <a class="btn btn-primary" href="@ExcelController.writeLog" title="Write Players' Activity Log to Google Docs.">
+    <a class="btn btn-primary" href="@ExcelController.writeSoccerPlayersLog" title="Write Players' Activity Log to Google Docs.">
         Write Players' Activity
     </a>
 
 </div>
-
 
 }
