Renamed Google docs button

--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -65,8 +65,8 @@ function getMongo() {
 </div>
 <br/>
 <div>
-    <a class="btn btn-primary" href="@ExcelController.index" title="Import Players' from Google Docs.">
-        Import Salaries from Google Docs
+    <a class="btn btn-primary" href="@ExcelController.index" title="Google Docs Import/Export">
+        Google Docs Import/Export
     </a>
     <a href="@ImportController.showImportTeams" class="btn btn-warning">Import Teams</a>
     <a href="@ImportController.showImportSoccers" class="btn btn-warning">Import SoccerPlayers</a>
