Admin: TemplateSoccerPlayer: se muestra el campo "createdAt"

--- a/admin/app/views/template_soccer_player_list.scala.html
+++ b/admin/app/views/template_soccer_player_list.scala.html
@@ -91,7 +91,8 @@
                 { "title": "Salary" },
                 { "title": "Fantasy Points" },
                 { "title": "Played Matches" },
-                { "title": "Team ID" }
+                { "title": "Team ID" },
+                { "title": "Create At" },
               ],
               "iDisplayLength": 100,
               "bProcessing": true,
