--- a/admin/app/views/import_match_events.scala.html
+++ b/admin/app/views/import_match_events.scala.html
@@ -1,4 +1,4 @@
-@(matchs_new: List[model.opta.OptaMatchEvent], matchs_changed: List[model.opta.OptaMatchEvent], matchs_invalid: List[model.opta.OptaMatchEvent], optaTeamMap: HashMap[String, model.opta.OptaTeam])
+@(matchs_invalid: List[model.opta.OptaMatchEvent], optaTeamMap: HashMap[String, model.opta.OptaTeam])
 
 @import controllers.admin.routes.ImportController
 @import model.GlobalDate
@@ -38,22 +38,6 @@
 @scripts = {
     <script type="text/javascript">
         $(document).ready( function(){
-            $('#ajax_table_new').dataTable( {
-                "columns": [ @include_columns() ],
-                "data": [ @include_matchs(matchs_new) ],
-                stateSave: true,
-                iDisplayLength: 100,
-                "deferRender": true
-            } );
-
-            $('#ajax_table_changed').dataTable( {
-                "columns": [ @include_columns() ],
-                "data": [ @include_matchs(matchs_changed) ],
-                stateSave: true,
-                iDisplayLength: 100,
-                "deferRender": true
-            } );
-
             $('#ajax_table_invalid').dataTable( {
                 "columns": [ @include_columns() ],
                 "data": [ @include_matchs(matchs_invalid) ],
@@ -77,32 +61,6 @@
 <h1 class="page-header">Import Match Events</h1>
 
 <h2 class="sub-header"></h2>
-
-<!--div class="col-md-12">
-    @if((matchs_new != null && !matchs_new.isEmpty) || (matchs_changed != null && !matchs_changed.isEmpty)) {
-    }
-</div-->
-
-<div class="col-md-6">
-    @if(matchs_new != null && !matchs_new.isEmpty) {
-    <br/>
-
-    <table id="ajax_table_new" class="table table-striped table-responsive">
-        <caption class="bg-primary">NEW</caption>
-    </table>
-    }
-</div>
-
-<div class="col-md-6">
-    @if(matchs_changed != null && !matchs_changed.isEmpty) {
-    <br/>
-
-    <table id="ajax_table_changed" class="table table-striped table-responsive">
-        <caption class="bg-info">CHANGED</caption>
-    </table>
-
-    }
-</div>
 
 <div class="col-md-12">
     @if(matchs_invalid != null && !matchs_invalid.isEmpty) {
