--- a/admin/app/views/import_soccers.scala.html
+++ b/admin/app/views/import_soccers.scala.html
@@ -1,4 +1,4 @@
-@(soccers_new: List[model.opta.OptaPlayer], soccers_changed: List[model.opta.OptaPlayer], soccers_invalid: List[model.opta.OptaPlayer])
+@(soccers_invalid: List[model.opta.OptaPlayer])
 
 @import controllers.admin.routes.ImportController
 
@@ -25,22 +25,6 @@
 @scripts = {
     <script type="text/javascript">
         $(document).ready( function(){
-            $('#ajax_table_new').dataTable( {
-                "columns": [ @include_columns() ],
-                "data": [ @include_soccers(soccers_new) ],
-                stateSave: true,
-                iDisplayLength: 100,
-                "deferRender": true
-            } );
-
-            $('#ajax_table_changed').dataTable( {
-                "columns": [ @include_columns() ],
-                "data": [ @include_soccers(soccers_changed) ],
-                stateSave: true,
-                iDisplayLength: 100,
-                "deferRender": true
-            } );
-
             $('#ajax_table_invalid').dataTable( {
                 "columns": [ @include_columns() ],
                 "data": [ @include_soccers(soccers_invalid) ],
@@ -64,28 +48,6 @@
 <h1 class="page-header">Import Soccers Players</h1>
 
 <h2 class="sub-header"></h2>
-
-
-
-<div class="col-md-6">
-    @if(soccers_new != null && !soccers_new.isEmpty) {
-    <br/>
-
-    <table id="ajax_table_new" class="table table-striped table-responsive">
-        <caption class="bg-primary">NEW</caption>
-    </table>
-    }
-</div>
-
-<div class="col-md-6">
-    @if(soccers_changed != null && !soccers_changed.isEmpty) {
-    <br/>
-
-    <table id="ajax_table_changed" class="table table-striped table-responsive">
-        <caption class="bg-info">CHANGED</caption>
-    </table>
-    }
-</div>
 
 <div class="col-md-12">
     @if(soccers_invalid != null && !soccers_invalid.isEmpty) {
