--- a/admin/app/views/import_teams.scala.html
+++ b/admin/app/views/import_teams.scala.html
@@ -1,4 +1,4 @@
-@(teams_new: List[model.opta.OptaTeam], teams_changed: List[model.opta.OptaTeam], teams_invalid: List[model.opta.OptaTeam],
+@(teams_invalid: List[model.opta.OptaTeam],
         competitionFilter: String = "*", competitionMap: HashMap[String, model.opta.OptaCompetition])
 
 @import controllers.admin.routes._
@@ -40,22 +40,6 @@
 @scripts = {
     <script type="text/javascript">
         $(document).ready( function(){
-            $('#ajax_table_new').dataTable( {
-                "columns": [ @include_columns() ],
-                "data": [ @include_teams(teams_new) ],
-                stateSave: true,
-                iDisplayLength: 100,
-                "deferRender": true
-            } );
-
-            $('#ajax_table_changed').dataTable( {
-                "columns": [ @include_columns() ],
-                "data": [ @include_teams(teams_changed) ],
-                stateSave: true,
-                iDisplayLength: 100,
-                "deferRender": true
-            } );
-
             $('#ajax_table_invalid').dataTable( {
                 "columns": [ @include_columns() ],
                 "data": [ @include_teams(teams_invalid) ],
@@ -101,32 +85,6 @@
     }
 </h2>
 
-
-<!--div class="col-md-12">
-@if((teams_new != null && !teams_new.isEmpty) || (teams_changed != null && !teams_changed.isEmpty)) {
-}
-</div-->
-
-<div class="col-md-6">
-    @if(teams_new != null && !teams_new.isEmpty) {
-    <br/>
-
-    <table id="ajax_table_new" class="table table-striped table-responsive">
-        <caption class="bg-primary">NEW</caption>
-    </table>
-    }
-</div>
-
-<div class="col-md-6">
-    @if(teams_changed != null && !teams_changed.isEmpty) {
-    <br/>
-
-    <table id="ajax_table_changed" class="table table-striped table-responsive">
-        <caption class="bg-info">CHANGED</caption>
-    </table>
-
-    }
-</div>
 
 <div class="col-md-12">
     @if(teams_invalid != null && !teams_invalid.isEmpty) {
