--- a/admin/app/views/simulatorbar.scala.html
+++ b/admin/app/views/simulatorbar.scala.html
@@ -1,8 +1,11 @@
 @import controllers.admin.SimulatorController
 @import controllers.admin.SnapshotController
+@import controllers.admin.AdminController
+
 @import controllers.admin.routes
 
 
+@if(AdminController.isLocalMongo()) {
 <div class="navbar navbar-fixed-bottom" style="background: #ededed; border-top: 1px solid #ccc">
     <div class="container-fluid">
         <div class="navbar-collapse collapse">
@@ -196,3 +199,4 @@
         });
 
 </script>
+}
