--- a/admin/app/views/points_translation_list.scala.html
+++ b/admin/app/views/points_translation_list.scala.html
@@ -2,16 +2,20 @@
 @import model.opta.{OptaEventType, OptaProcessor}
 @import model.GlobalDate
 @import controllers.admin.routes._
+@import controllers.admin.AdminController
 
 @main("Contests - Admin") {
 
 <h1 class="page-header">Event-Point Translation List</h1>
 
 <a href="@PointsTranslationController.newForm"><button class="btn btn-success">New points for Event</button></a>
+
+@if(AdminController.isLocalMongo()) {
 <div style="float: right; margin-right:100px;">
     <a href="@PointsTranslationController.resetToDefault"><button class="btn btn-danger">Reset points to Default</button></a>
     <a href="@OptaController.updateOptaEvents"><button class="btn btn-danger">Recalculate points for all OptaEvents</button></a>
 </div>
+}
 
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
