--- a/admin/app/views/template_contest_list.scala.html
+++ b/admin/app/views/template_contest_list.scala.html
@@ -1,5 +1,7 @@
 @()
 
+@import controllers.admin.AdminController
+
 @import model._
 @import controllers.admin.routes._
 
@@ -54,9 +56,12 @@
 <h1 class="page-header">Template Contests</h1>
 
 <a href="@TemplateContestController.newForm"><button class="btn btn-success">Add Contest</button></a>
+
+@if(AdminController.isLocalMongo()) {
 <div style="float: right; margin-right:100px;">
     <a href="@TemplateContestController.createAll"><button class="btn btn-danger">Create All Contests</button></a>
 </div>
+}
 
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
