Corramos un tupido velo

--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -10,8 +10,27 @@ $(document).ready(function() {
 
 });
 
+function setOverlay() {
+   var docHeight = $(document).height();
+
+   $("body").append("<div id='overlay'></div>");
+
+   $("#overlay")
+      .height(docHeight)
+      .css({
+         'opacity' : 0.6,
+         'position': 'absolute',
+         'top': 0,
+         'left': 0,
+         'background-color': 'gray',
+         'width': '100%',
+         'z-index': 5000
+      });
+}
+
 function setMongo() {
         var new_mongo = $('#mongo-conn').val();
+        setOverlay();
         var another_temp = $.ajax({
                         url: "/admin/setmongo/"+new_mongo,
                         success: function (result) {
