--- a/admin/app/views/googledocs.scala.html
+++ b/admin/app/views/googledocs.scala.html
@@ -1,13 +1,24 @@
 @import controllers.admin.routes._
 
+@import helper._
+
 @main("DailySoccer - Admin - Google Docs") {
+
+
 
 <h1 class="page-header">Google Docs integration</h1>
 
 <div>
-    <a class="btn btn-primary" href="@ExcelController.loadSalaries" title="Read Players' salaries from Google Docs.">
-        Read Players' Salaries
-    </a>
+
+    @helper.form(action = ExcelController.upload, 'enctype -> "multipart/form-data") {
+
+    <input type="file" name="picture">
+
+    <p>
+        <input type="submit">
+    </p>
+
+    }
 
     <a class="btn btn-primary" href="@ExcelController.writeSoccerPlayersLog" title="Write Players' Activity Log to Google Docs.">
         Write Players' Activity
