--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -88,8 +88,8 @@ function getMongo() {
 </div>
 <br/>
 <div>
-    <a class="btn btn-primary" href="@ExcelController.index" title="Google Docs Import/Export">
-        Google Docs Import/Export
+    <a class="btn btn-primary" href="@ExcelController.index" title="Excel Import/Export">
+        Excel Import/Export
     </a>
     <a href="@ImportController.showImportTeams" class="btn btn-warning">Import Teams</a>
     <a href="@ImportController.showImportSoccers" class="btn btn-warning">Import SoccerPlayers</a>
